# accountant

./: .gitignore  Cargo.toml  up.sql
client/: Cargo.toml
client/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
