[package]
name = "server"
version = "0.1.0"
edition = "2018"

[dependencies]
shared = { path = "../shared" }
tokio = { version = "1.12", features = ["full"] }
log = "0.4"
bincode = "1.3"
rust_decimal = "1.16"
chrono = "0.4"
sqlx = { version = "0.5.9", features = [ "runtime-tokio-rustls", "postgres", "decimal", "chrono" ] }
dotenv = "0.15"