[package]
name = "shared"
version = "0.1.0"
edition = "2018"

[dependencies]
rust_decimal = "1.16"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.5.9", features = [ "runtime-tokio-rustls", "postgres", "decimal", "chrono" ] }
async-trait = "0.1"